@@ -1,3 +1,15 @@
+2013-01-17  Eric Seidel  <eric@webkit.org>
+
+        Add a version of the html-parser benchmark which uses srcdoc instead of document.write so it tests the threaded parser
+        https://bugs.webkit.org/show_bug.cgi?id=107158
+
+        Reviewed by Ryosuke Niwa.
+
+        Currently this test even opts-in to the threaded parser if available.
+        We'll remove that line when the threaded parser becomes default or goes away.
+
+        * Parser/html-parser-srcdoc.html: Added.
+
 2013-01-16  Arnaud Renevier  <a.renevier@sisa.samsung.com>
 
         inconsistency in drawImage with target rect negative dimensions.
